objects/APTS_Target_CustomerDiscounts__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(WhCustID__r.Country1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Country is set on the parent Target Discount record</inlineHelpText>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exp_Target_Discount__c</fullName>
        <label>Expected Target Discount (%)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductHierarchyValidUntilCombination__c</fullName>
        <label>ProductHierarchy-ValidUntil Combination</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <errorMessage>Record does not exist or is not a hierarchy</errorMessage>
            <filterItems>
                <field>Product2.APTS_LP_Is_Hierarchy__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$User.Default_LSO__c</field>
                <operation>contains</operation>
                <valueField>Product2.APTS_LP_Sales_Organization__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product2.APTS_Hierarchy_Level__c</field>
                <operation>equals</operation>
                <value>4</value>
            </filterItems>
            <infoMessage>Search results limited to hierarchies</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Target Discount Hierarchies</relationshipLabel>
        <relationshipName>Target_Customer_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recovery2__c</fullName>
        <label>Additional discount for Target Customer</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Validity_Date__c</fullName>
        <inlineHelpText>can be left empty or filled with a date in the future. entries with dates in the past will be excluded from calculations</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WhCustID__c</fullName>
        <label>Wholesaler-Customer Combination</label>
        <referenceTo>APTS_Target_CustomerWholesaler__c</referenceTo>
        <relationshipLabel>Target Discount Hierarchies</relationshipLabel>
        <relationshipName>Target_Customer_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Target Discount Hierarchy</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>TarCustID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Discount Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Hierarchy_set</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Hierarchy must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Exp_Target_Discount</fullName>
        <active>true</active>
        <errorConditionFormula>Exp_Target_Discount__c &lt; 0 || Exp_Target_Discount__c &gt; 1</errorConditionFormula>
        <errorDisplayField>Exp_Target_Discount__c</errorDisplayField>
        <errorMessage>Expected Target Discount must be between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Recovery</fullName>
        <active>true</active>
        <errorConditionFormula>Recovery2__c &lt; 0 || Recovery2__c &gt; 1</errorConditionFormula>
        <errorDisplayField>Recovery2__c</errorDisplayField>
        <errorMessage>Recovery2 must be between 0 and 100</errorMessage>
    </validationRules>
</CustomObject>